--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "webcrypto": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
